--- a/src/001-float-property/example/index.html
+++ b/src/001-float-property/example/index.html
@@ -34,9 +34,8 @@
     <div class="page-content">
       <!-- Practice Content Goes Here -->
 
-      <div>
-        <header><h1>This is an example of Float CSS property</h1></header>
 
+        <header><h1>This is an example of Float CSS property</h1></header>
         <nav>
           <ul>
             <li><a href="">Link 1</a></li>
@@ -45,6 +44,27 @@
             <li><a href="">Link 4</a></li>
           </ul>
         </nav>
+
+        <aside>
+          <label>
+            Search for
+            <input type="text">
+          </label>
+          <p>Class sed non curabitur aliquet. Dicta erat. Egestas ut. Hymenaeos dolor a natoque nec arcu massa, libero
+            justo donec. Erat quisque ante eget pharetra vitae quam, donec a imperdiet, lectus integer duis eu vivamus
+            turpis quia, nulla quis habitant in commodo, nonummy maecenas urna dui ligula ipsum. Sed maecenas proin sed
+            wisi integer. Pellentesque congue platea velit nam. Taciti diam, sed fermentum neque, arcu urna sem morbi
+            ante wisi dictum, in suspendisse in mi. Hendrerit consequat mollis mi ac ipsum dictumst, eget amet, rhoncus
+            nisl pellentesque pharetra. Taciti elit aliquam lacus.</p>
+
+          <ul>
+            <li><a href="">Something 1</a></li>
+            <li><a href="">Something 2</a></li>
+            <li><a href="">Something 3</a></li>
+            <li><a href="">Something 4</a></li>
+          </ul>
+
+        </aside>
 
         <article>
           <h2>Article Title</h2>
@@ -71,27 +91,9 @@
             etiam turpis libero, nunc diam et eros amet augue curabitur.</p>
         </article>
 
-        <aside>
-          <label>
-            Search for
-            <input type="text">
-          </label>
-          <p>Class sed non curabitur aliquet. Dicta erat. Egestas ut. Hymenaeos dolor a natoque nec arcu massa, libero
-            justo donec. Erat quisque ante eget pharetra vitae quam, donec a imperdiet, lectus integer duis eu vivamus
-            turpis quia, nulla quis habitant in commodo, nonummy maecenas urna dui ligula ipsum. Sed maecenas proin sed
-            wisi integer. Pellentesque congue platea velit nam. Taciti diam, sed fermentum neque, arcu urna sem morbi
-            ante wisi dictum, in suspendisse in mi. Hendrerit consequat mollis mi ac ipsum dictumst, eget amet, rhoncus
-            nisl pellentesque pharetra. Taciti elit aliquam lacus.</p>
+        
 
-          <ul>
-            <li><a href="">Something 1</a></li>
-            <li><a href="">Something 2</a></li>
-            <li><a href="">Something 3</a></li>
-            <li><a href="">Something 4</a></li>
-          </ul>
-        </aside>
-
-        <section>
+        <article id="section1">
           <h2>Gallery</h2>
           <ul>
             <li><img src="../resources/no-image.jpg" alt="image" width="250px"></li>
@@ -105,23 +107,24 @@
             <li><img src="../resources/no-image.jpg" alt="image" width="250px"></li>
             <li><img src="../resources/no-image.jpg" alt="image" width="250px"></li>
           </ul>
-        </section>
+        </article>
 
-        <section>
+        <section id="section2">
           <img src="../resources/no-image.jpg" width="95" height="84">
           <p><span>T</span>his is some text. This is some text. This is some text. This is some text. This is some text.
             This is some
             text.</p>
+          
           <p><span>T</span>his is also some text. This is also some text. This is also some text. This
             is also some
             text. This is also some text. This is also some text.</p>
         </section>
 
-        <div><img src="../resources/no-image.jpg" width="100" height="140">
+        <footer><img src="../resources/no-image.jpg" width="100" height="140">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum...
-        </div>
+        </footer>
       </div>
-    </div>
+
   </main>
 </div>
 
